Css fix in template pages

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -6666,7 +6666,7 @@ iframe.embed-responsive-item {
   font-size: 18px;
   color: #4A4A4A;
   line-height: 1.875;
-  margin-top: 30px;
+  margin: 30px 0px;
   letter-spacing: 0.02em;
 }
 
@@ -6745,9 +6745,17 @@ iframe.embed-responsive-item {
   }
 }
 
-.guideTemplate_content {
+.guideTemplate_img  {
   img {
     max-width: 430px;
+  }
+}
+
+@media screen and (max-width: 575px) {
+    .guideTemplate_img  {
+      img {
+        max-width: 300px;
+      }
   }
 }
 @media only screen and (max-width: 1199px) {
@@ -6796,7 +6804,7 @@ iframe.embed-responsive-item {
 
 .secoundaryColor_block h6:before {
   position: absolute;
-  content: "url(images/svg/)";
+  content: "";
   color: rgba(0, 208, 156, 0.05);
   font-size: 1rem;
   border: 1px solid #00D09C;
@@ -6847,7 +6855,7 @@ iframe.embed-responsive-item {
 
 .primaryColor_block h6:before {
   position: absolute;
-  content: "url(images/svg/)";
+  content: "";
   color: rgba(0, 208, 156, 0.05);
   font-size: 1rem;
   border: 1px solid #4865FF;
