--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,3 +1,5 @@
+// @import '../styles/common.scss'
+
 /*!
  * Bootstrap v4.0.0-alpha.6 (https://getbootstrap.com)
  * Copyright 2011-2017 The Bootstrap Authors
