--- a/src/styles/partials/testimonial.scss
+++ b/src/styles/partials/testimonial.scss
@@ -62,6 +62,7 @@
     padding-right: 7.5rem;
     -webkit-transition: all 0.25s ease-in-out 0s;
     transition: all 0.25s ease-in-out 0s;
+    cursor: pointer;
     &:hover {
         box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.15);
         border: 2px solid rgba(72, 101, 255, 0.33);
@@ -108,7 +109,7 @@
     margin: 0px;
 }
 
-.testimonialContentOutline {
+.testimonialContentOutline p{
     font-size: $blockquote-font-size;
     color: $primary-color;
     line-height: 1.5;
@@ -127,6 +128,18 @@
     color: $base-font-color;
     letter-spacing: $no-letter-spacing;
     line-height: 1.28;
+    h6 {
+        font-size: 1.125rem;
+        color: #060E3D;
+        line-height: 2;
+      }
+      p{
+        opacity: 0.6;
+        font-size: 14px;
+        color: #060E3D;
+        letter-spacing: 0em;
+        line-height: 1.28;
+      }
 }
 
 .testimonialAuthorShadeimg {
@@ -219,7 +232,7 @@
 }
 
 .va_text {
-    margin-top: 24px;
+    margin-top: 20px;
 }
 
 .primary_text {
