--- a/src/styles/partials/productsection.scss
+++ b/src/styles/partials/productsection.scss
@@ -24,11 +24,12 @@
 
 .popCard {
     max-width: 350px;
-    margin: 3.5rem 20px;
+    margin: 2.5rem 20px;
     -webkit-transition: all 0.25s ease-in-out 0s;
     transition: all 0.25s ease-in-out 0s;
     cursor: pointer;
     border-radius: $common-border-radius;
+    margin-bottom: 8rem;
 
     &:hover {
         background: $white;
@@ -41,16 +42,14 @@
     }
 
     @include bp-lg {
-        margin-left: 0px;
-    }
-    @include bp-lg {
         max-width: 320px;
+        margin-left: 0px;
+        margin-bottom: unset;
     }
 
     @include bp-sm {
         background: $white;
         box-shadow: 0 3px 1px 0 rgba(152, 168, 255, 0.31);
-        margin-bottom: 6.25rem;
 
         &:last-child {
             margin-bottom: 0px;
