--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,36 +1,18 @@
-$grid-columns: 12;
 //----------------------------------*\
 // SCSS bootstrap
 //----------------------------------*/
-@import "bootstrap";
-@import 'modules/variables.scss';
-//----------------------------------*\
-// SCSS MIXINS
-//----------------------------------*/
-@import 'mixins/breakpoints.scss';
-@import 'mixins/color';
-//----------------------------------*\
-// SCSS MODULES
-//----------------------------------*/
-@import 'modules/defaults.scss';
-@import 'modules/colors.scss';
-@import 'modules/typography.scss';
-@import 'modules/button.scss';
+@import "./bootstrap.scss";
+@import './modules/variables.scss';
+// //----------------------------------*\
+// // SCSS MIXINS
+// //----------------------------------*/
+@import './mixins/breakpoints.scss';
+@import './mixins/color.scss';
+// //----------------------------------*\
+// // SCSS MODULES
+// //----------------------------------*/
+@import './modules/defaults.scss';
+@import './modules/colors.scss';
+@import './modules/typography.scss';
+@import './modules/buttons.scss';
 
-html {
-  body {
-      font-size: $base-font-size;
-  }
-
-  @include bp-md {
-      font-size: 100%;
-  }
-
-  @include bp-sm {
-      font-size: 90%;
-  }
-
-  @include bp-xs {
-      font-size: 85%;
-  }
-}
