--- a/src/styles/modules/defaults.scss
+++ b/src/styles/modules/defaults.scss
@@ -1,26 +1,26 @@
-@font-face {
-    font-family: 'Sailec';
-    src: url('../fonts/Sailec.eot');
-    src: url('../fonts/Sailec.eot?#iefix') format('embedded-opentype'), url('../fonts/Sailec.woff') format('woff'), url('../fonts/Sailec.woff2') format('woff2');
-    font-weight: normal;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'Sailec';
+//     src: url('../fonts/Sailec.eot');
+//     src: url('../fonts/Sailec.eot?#iefix') format('embedded-opentype'), url('../fonts/Sailec.woff') format('woff'), url('../fonts/Sailec.woff2') format('woff2');
+//     font-weight: normal;
+//     font-style: normal;
+// }
 
-@font-face {
-    font-family: 'Sailec';
-    src: url('../fonts/Sailec-Medium.eot');
-    src: url('../fonts/Sailec-Medium.eot?#iefix') format('embedded-opentype'), url('../fonts/Sailec-Medium.woff') format('woff'), url('../fonts/Sailec-Medium.woff2') format('woff2');
-    font-weight: 500;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'Sailec';
+//     src: url('../fonts/Sailec-Medium.eot');
+//     src: url('../fonts/Sailec-Medium.eot?#iefix') format('embedded-opentype'), url('../fonts/Sailec-Medium.woff') format('woff'), url('../fonts/Sailec-Medium.woff2') format('woff2');
+//     font-weight: 500;
+//     font-style: normal;
+// }
 
-@font-face {
-    font-family: 'Sailec';
-    src: url('../fonts/Sailec-Bold.eot');
-    src: url('../fonts/Sailec-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Sailec-Bold.woff') format('woff'), url('../fonts/Sailec-Bold.woff2') format('woff2');
-    font-weight: 800;
-    font-style: normal;
-}
+// @font-face {
+//     font-family: 'Sailec';
+//     src: url('../fonts/Sailec-Bold.eot');
+//     src: url('../fonts/Sailec-Bold.eot?#iefix') format('embedded-opentype'), url('../fonts/Sailec-Bold.woff') format('woff'), url('../fonts/Sailec-Bold.woff2') format('woff2');
+//     font-weight: 800;
+//     font-style: normal;
+// }
 
 ::selection {
     background: #000000;
