--- a/src/styles/scss/_mixins.scss
+++ b/src/styles/scss/_mixins.scss
@@ -19,29 +19,29 @@
 }
 
 // Utilities
-@import "mixins/breakpoints";
-@import "mixins/hover";
+@import "./mixins/breakpoints.scss";
+@import "./mixins/hover.scss";
 
 
-@import "mixins/screen-reader";
-@import "mixins/reset-text";
-@import "mixins/text-emphasis";
-@import "mixins/text-hide";
-@import "mixins/text-truncate";
-@import "mixins/transforms";
-@import "mixins/visibility";
+@import "./mixins/screen-reader.scss";
+@import "./mixins/reset-text.scss";
+@import "./mixins/text-emphasis.scss";
+@import "./mixins/text-hide.scss";
+@import "./mixins/text-truncate.scss";
+@import "./mixins/transforms.scss";
+@import "./mixins/visibility.scss"; 
 
 // // Components
-@import "mixins/button";
-@import "mixins/cards";
+@import "./mixins/buttons.scss";
+@import "./mixins/cards.scss";
 
 
 // // Skins
-@import "mixins/background-variant";
-@import "mixins/border-radius";
+@import "./mixins/background-variant.scss";
+@import "./mixins/border-radius.scss";
 
 // // Layout
-@import "mixins/clearfix";
-@import "mixins/grid-framework";
-@import "mixins/grid";
-@import "mixins/float";
+@import "./mixins/clearfix.scss";
+@import "./mixins/grid-framework.scss";
+@import "./mixins/grid.scss";
+@import "./mixins/float.scss";
