--- a/src/styles/partials/home-page.scss
+++ b/src/styles/partials/home-page.scss
@@ -142,6 +142,7 @@ section {
     padding: 5rem;
     border-radius: 10px;
     background-image: linear-gradient(-235deg, #071563 0%, #4865FF 100%);
+    width: 100%;
 
     @include bp-md {
         padding: 2.5rem;
@@ -149,6 +150,22 @@ section {
 
     @include bp-xs {
         padding: 2.5rem 15px;
+    }
+
+    li {
+        padding-left: 3rem;
+        background-image: url(../images/svg/whitetick.svg);
+        background-repeat: no-repeat;
+        background-position: left top 2px;
+        margin-bottom: 1.875rem;
+        line-height: $h2-line-height;
+        list-style-type: none;
+        min-height: 30px;
+        font-size: $base-font-size;
+        color: $white;
+    }
+    p{
+        color: $white;
     }
 }
 
