--- a/src/styles/partials/whitelabel.scss
+++ b/src/styles/partials/whitelabel.scss
@@ -6,9 +6,13 @@
     padding: 2.5rem;
     border-radius: $border-radius-base;
     background-size: cover;
+    width: 100%;
 
     @include bp-sm {
         padding: 2.5rem 1.5rem;
+    }
+    p {
+        color: #ffffff;
     }
 }
 
