--- a/src/styles/partials/whitelabel.scss
+++ b/src/styles/partials/whitelabel.scss
@@ -16,7 +16,7 @@
     }
 }
 
-.whitelabel_pre {
+.whitelabel_pre p{
     font-size: $pre-font-size;
     color: $white;
     letter-spacing: $no-letter-spacing;
