--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -4983,11 +4983,18 @@ section {
   margin-top: 5rem;
   margin-bottom: 3.75rem;
   max-width: 480px;
+
+  ul {
+    margin-top: 5rem;
+  }
 }
 @media only screen and (max-width: 1199px) {
   .list_unstyled {
     margin-top: 2rem;
     margin-bottom: 2rem;
+    ul {
+      margin-top: 2rem;
+    }
   }
 }
 
