Added style refactoring

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -16,3 +16,20 @@
 @import './modules/typography.scss';
 @import './modules/buttons.scss';
 
+@import './partials/header.scss';
+@import './partials/footer.scss';
+@import './partials/home-page.scss';
+@import './partials/herosection.scss';
+@import './partials/label.scss';
+@import './partials/testimonial.scss';
+@import './partials/productsection.scss';
+@import './partials/grandientsection.scss';
+@import './partials/bannersection.scss';
+@import './partials/form.scss';
+@import './partials/managesection.scss';
+@import './partials/learnsection.scss';
+@import './partials/webinarsection.scss';
+@import './partials/casestudysection.scss';
+@import './partials/whitelabel.scss';
+@import './partials/guidetemplate.scss';
+@import './partials/ebooksection.scss';
