--- a/src/styles/partials/home-page.scss
+++ b/src/styles/partials/home-page.scss
@@ -55,7 +55,7 @@ section {
 
 .list_unstyled li {
     padding-left: 3rem;
-    background-image: url(../images/svg/tick.svg);
+    // background-image: url(../images/svg/tick.svg);
     background-repeat: no-repeat;
     background-position: left top 2px;
     margin-bottom: 1.875rem;
@@ -161,7 +161,7 @@ section {
 
     li {
         padding-left: 3rem;
-        background-image: url(../images/svg/whitetick.svg);
+        // background-image: url(../images/svg/whitetick.svg);
         background-repeat: no-repeat;
         background-position: left top 2px;
         margin-bottom: 1.875rem;
@@ -200,7 +200,7 @@ section {
 
 .list_enterprise li {
     padding-left: 3rem;
-    background-image: url(../images/svg/whitetick.svg);
+    // background-image: url(../images/svg/whitetick.svg);
     background-repeat: no-repeat;
     background-position: left top 2px;
     margin-bottom: 1.875rem;
@@ -277,7 +277,7 @@ section {
 
 .blogWrapper_left {
     display: flex;
-    background-image: url(../images/blogbg.jpg);
+    // background-image: url(../images/blogbg.jpg);
     background-size: cover;
     background-position: center;
     border-radius: 4px;
@@ -306,7 +306,7 @@ section {
 
 .blogWrapper_left_tool {
     display: flex;
-    background-image: url(../images/freetool.png);
+    // background-image: url(../images/freetool.png);
     background-size: cover;
     background-position: center;
     border-radius: 4px;
@@ -373,7 +373,7 @@ section {
     position: relative;
     display: flex;
     flex-direction: column;
-    background-image: url(../images/review-handout.png);
+    // background-image: url(../images/review-handout.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -423,7 +423,7 @@ section {
     display: flex;
     flex-direction: column;
     background: rgba(0, 208, 156, 0.5);
-    background-image: url(../images/blog-google.png);
+    // background-image: url(../images/blog-google.png);
     box-shadow: 0 3px 1px 0 rgba(152, 168, 255, 0.31);
     background-repeat: no-repeat;
     background-size: cover;
