--- a/src/styles/partials/learnsection.scss
+++ b/src/styles/partials/learnsection.scss
@@ -64,7 +64,7 @@
     color: $white;
     width: 100%;
     max-width: 620px;
-    background-image: url(../images/svg/pale-uploading.svg);
+    // background-image: url(../images/svg/pale-uploading.svg);
     background-position: right bottom;
     background-repeat: no-repeat;
     background-size: cover;
