--- a/src/styles/partials/testimonial.scss
+++ b/src/styles/partials/testimonial.scss
@@ -5,7 +5,7 @@
     border-radius: 10px;
     padding: 2.5rem;
     max-width: 820px;
-    background-image: url(../images/svg/testimonial-icon.svg);
+    // background-image: url(../images/svg/testimonial-icon.svg);
     background-position: right 15px bottom;
     background-repeat: no-repeat;
     -webkit-transition: all 0.25s ease-in-out 0s;
