--- a/src/styles/partials/whitelabel.scss
+++ b/src/styles/partials/whitelabel.scss
@@ -1,6 +1,6 @@
 // section_whitelabel
 .whitelabel_primaryWrapper {
-    background: linear-gradient(90deg, rgba(72, 101, 255, 1) 0%, rgba(72, 101, 255, 0.57) 100%), url(../images/mapbg.png);
+    // background: linear-gradient(90deg, rgba(72, 101, 255, 1) 0%, rgba(72, 101, 255, 0.57) 100%), url(../images/mapbg.png);
     background-position: center;
     background-repeat: no-repeat;
     padding: 2.5rem;
