--- a/src/styles/partials/herosection.scss
+++ b/src/styles/partials/herosection.scss
@@ -3,7 +3,7 @@
     position: relative;
     // height: 100vh;
     padding-bottom: 26rem;
-    background-image: url(../images/svg/homepagebg.svg);
+    // background-image: url(../images/svg/homepagebg.svg);
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: contain;
