--- a/src/styles/partials/label.scss
+++ b/src/styles/partials/label.scss
@@ -6,7 +6,7 @@
     border-radius: $common-border-radius;
     text-align: center;
     color: $white;
-    background-image: url(../images/svg/shape-bg.svg);
+    // background-image: url(../images/svg/shape-bg.svg);
     background-position: center bottom;
     background-repeat: no-repeat;
 
