--- a/src/styles/partials/home-page.scss
+++ b/src/styles/partials/home-page.scss
@@ -1,7 +1,7 @@
 //Home page styles
-// main {
-//     padding-top: 5rem;
-// }
+main {
+    padding-top: 5rem;
+}
 
 section {
     padding: 6rem 0px;
