--- a/src/styles/partials/productsection.scss
+++ b/src/styles/partials/productsection.scss
@@ -1,6 +1,9 @@
 //product
 .product_description h4 {
     max-width: 440px;
+    @include bp-md{
+        margin-bottom: 30px;
+    }
 }
 
 .product_wrapper {
@@ -16,15 +19,20 @@
     display: flex;
     flex-wrap: wrap;
     flex: 0.5;
+    min-width: 470px;
 
     @include bp-lg {
         margin-bottom: 6rem;
+        min-width: unset;
+    }
+    @include bp-md{
+        justify-content: center;
     }
 }
 
 .popCard {
     max-width: 350px;
-    margin: 2.5rem 20px;
+    margin: 2.5rem 0px;
     -webkit-transition: all 0.25s ease-in-out 0s;
     transition: all 0.25s ease-in-out 0s;
     cursor: pointer;
@@ -44,7 +52,7 @@
     @include bp-lg {
         max-width: 320px;
         margin-left: 0px;
-        margin-bottom: unset;
+        margin-bottom: 2rem;
     }
 
     @include bp-sm {
@@ -70,13 +78,14 @@
     flex: 1;
 
     @include bp-lg {
-        justify-content: flex-start;
+        justify-content: space-between;
         margin-top: 3rem;
 
     }
 
     @include bp-sm {
         flex-wrap: wrap;
+        justify-content: center;
     }
 }
 
