fix for features

--- a/src/components/additionals.css
+++ b/src/components/additionals.css
@@ -1,3 +1,7 @@
 .list_unstyled li {
   background-image: url(./images/svg/tick.svg);
 }
+
+.enterprise_blockWrapper li {
+  background-image: url(./images/svg/whitetick.svg);
+}
