--- a/src/styles/partials/ebooksection.scss
+++ b/src/styles/partials/ebooksection.scss
@@ -90,7 +90,7 @@
 // ebook
 .ebook_lists {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     margin: 3.125rem 0;
 
@@ -129,6 +129,8 @@
 .ebook_anchor {
     position: relative;
     max-width: 300px;
+    max-height: 420px;
+    overflow: hidden;
     -webkit-box-shadow: 0px 12px 20px 0px rgba(0, 0, 0, 0.16);
     -moz-box-shadow: 0px 12px 20px 0px rgba(0, 0, 0, 0.16);
     box-shadow: 0px 12px 20px 0px rgba(0, 0, 0, 0.16);
