--- a/src/styles/partials/webinarsection.scss
+++ b/src/styles/partials/webinarsection.scss
@@ -100,3 +100,86 @@
 .speakers_img {
     min-width: 100px;
 }
+.webinar_resourceBlock{
+    border-radius: 4px;
+    min-width: 750px;
+    position: relative;
+    overflow: hidden;
+
+    @include bp-lg {
+        min-width: auto;
+    }
+
+    .blogTool-overlay {
+        position: absolute;
+        background: rgba(72, 101, 255, 0.75);
+        height: 100%;
+        width: 100%;
+        left: 0px;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        -webkit-transition: all 0.25s ease-in-out 0s;
+        transition: all 0.25s ease-in-out 0s;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        left: 50%;
+    }
+
+    .blogInnerTool-overlay {
+        position: absolute;
+        background: rgba(72, 101, 255, 0.45);
+        height: 100%;
+        width: 100%;
+        left: 0px;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        -webkit-transition: all 0.25s ease-in-out 0s;
+        transition: all 0.25s ease-in-out 0s;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        left: 50%;
+    }
+
+    h5{
+        font-weight: 500;
+        font-size: 28px;
+        color: #FFFFFF;
+        line-height: 1.2;
+        max-width: 550px;
+        margin-bottom: 0;
+        padding: 40px;
+        position: relative;
+    }
+    img {
+        width: 55px;
+        height: 55px;
+        border: 2px solid #fff;
+        border-radius: 50%;
+        margin-right: 10px;
+    }
+    .speaker{
+        font-weight: 500;
+        font-size: 16px;
+        color: #FFFFFF;
+        letter-spacing: 0;
+        margin-bottom: 10px;
+    }
+    .position p{
+        font-weight: 500;
+        font-size: 12px;
+        color: #FFFFFF;
+        letter-spacing: 0;
+    }
+    .resource_inner {
+        position: relative;
+        display: flex;
+        align-items: center;
+        padding: 40px;
+    }
+}
