--- a/src/components/additionals.css
+++ b/src/components/additionals.css
@@ -7,6 +7,8 @@
 }
 .webinar_resourceBlock{
   background:url(./images/FeaturedWebinar-bg.png);
+  background-position: right ;
+  background-repeat: no-repeat;
 }
 .testimonialWrapper {
   background-image: url(./images/svg/testimonial-icon.svg);
