--- a/src/styles/partials/webinarsection.scss
+++ b/src/styles/partials/webinarsection.scss
@@ -103,6 +103,7 @@
 .webinar_resourceBlock{
     border-radius: 4px;
     min-width: 750px;
+    height: 450px;
     position: relative;
     overflow: hidden;
 
@@ -153,9 +154,9 @@
         line-height: 1.2;
         max-width: 550px;
         margin-bottom: 0;
-        padding: 40px;
         position: relative;
     }
+  
     img {
         width: 55px;
         height: 55px;
@@ -180,6 +181,6 @@
         position: relative;
         display: flex;
         align-items: center;
-        padding: 40px;
+        padding: 2.5rem;
     }
 }
