--- a/src/styles/partials/testimonial.scss
+++ b/src/styles/partials/testimonial.scss
@@ -142,13 +142,15 @@
         color: #060E3D;
         line-height: 2;
       }
-      p{
+    div {
+      p {
         opacity: 0.6;
         font-size: 14px;
         color: #060E3D;
         letter-spacing: 0em;
         line-height: 1.28;
       }
+    }
 }
 
 .testimonialAuthorShadeimg {
