--- a/src/styles/partials/home-page.scss
+++ b/src/styles/partials/home-page.scss
@@ -91,12 +91,12 @@ section {
 
 // annoucementBar.
 .annoucement_bar {
-    // position: fixed;
+    position: fixed;
     width: 100%;
     padding: 10px;
     top: 0px;
     z-index: 999;
-
+    right: 0px;
     @include bp-lg {
         padding: 5px;
     }
