--- a/src/styles/partials/header.scss
+++ b/src/styles/partials/header.scss
@@ -63,7 +63,7 @@
     position: fixed;
     right: 0;
     z-index: 99;
-    top: 40px;
+    top: 0px;
     transition: all 0.25s;
 
     &.active {
@@ -74,6 +74,9 @@
         @include bp-xs {
             padding: 7px 0;
         }
+    }
+    &.with-announcement {
+      top: 40px;
     }
 }
 
