Resource page linking

--- a/src/styles/partials/ebooksection.scss
+++ b/src/styles/partials/ebooksection.scss
@@ -103,6 +103,9 @@
     @include bp-sm {
         justify-content: center;
     }
+    img {
+        max-height: 420px;
+    }
 }
 
 .ebook_wrapper {
