Added cta page base

--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -33,3 +33,4 @@
 @import './partials/whitelabel.scss';
 @import './partials/guidetemplate.scss';
 @import './partials/ebooksection.scss';
+@import './partials/cta.scss'
