--- a/src/styles/partials/header.scss
+++ b/src/styles/partials/header.scss
@@ -78,7 +78,7 @@
     &.with-announcement {
       top: 40px;
       @include bp-md {
-        top: 25px;
+        // top: 25px;
       }
     }
 }
@@ -343,7 +343,9 @@ header.navbar {
         }
     }
 }
-
+.announcementWrapper {
+    display: block;
+}
 header.navbar.header--top {
     padding: 10px 0;
     box-shadow: 0 1px 2px rgba(0, 0, 0, .13);
@@ -901,6 +903,14 @@ header.navbar.header--top {
     }
 }
 
+.closeIcon {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    z-index: 100;
+    font-weight: 500;
+    font-size: 15px;
+}
 
 @-webkit-keyframes fadeIn {
     from {
